style.css
@font-face {
    font-family: 'Lato';
    src: url('fonts/Lato-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "VictorMono";
    src: url("fonts/VictorMono-SemiBold.ttf") format("truetype");
    font-weight: 600;
    font-style: normal;
  }

.accent-text {
    background: -webkit-linear-gradient(45deg, DarkOrchid, RoyalBlue, Teal);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

a:link {
  color: RoyalBlue;
}

a:visited {
  color: DarkOrchid;
}

a:hover {
  color: Teal;
}

a:active {
  font-weight: 700;
}

p {
    max-width: 60em;
}

body {
    font-family: 'Lato', sans-serif;
    font-size: 1.1em;
    line-height: 1.4;
    margin: 2em;
    color: #171717;
}

#header {
    position: -webkit-sticky;
    position: sticky;
    font-size: 3em;
    top: 0;
    width: 100%;
    margin: -0.5em 0;
    backdrop-filter: blur(10px);
}

#title {
    //text-transform: uppercase;
    font-family: 'VictorMono', monospace;
    font-size: 1em;
    letter-spacing: 0.13em;
    display: inline;
}

#links {
    display: inline;
    padding-left: 0em;
}

.about-link {
    list-style: none;
    display: inline;
    margin: 0 -0.2em 0 0.5em;
}

.icon {
    max-height: 0.6em;
    max-width: 0.6em;
}

.icon:hover {
    -webkit-filter: drop-shadow(0 0 0.1em teal);
    filter: drop-shadow(0 0 0.1em teal);
}

#about {
    margin: 2em 0;
}

#pieces {
    padding: 0;
    margin: 0;
}

.piece {
    list-style: none;
}

.piece-title {
    font-family: 'VictorMono', monospace;
    font-weight: 600;
    font-size: 1.3em;
    margin-right: 0.5em;
}

.piece-images {
    padding: 0;
    list-style: none;
}

.image-list-item {
    display: inline-block;
}

.piece-media {
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.33);
    margin: 0.4em 0.8em 0.4em 0;
}

.piece-image {
    max-height: 32em;
    max-width: 32em;
}

.piece-video {
    max-width: 80%;
    height: auto;
    background-color: #171717;
}

hr {
    margin: 2em 0;
    border: 1px solid #cccccc;
    background-color: #cccccc;
}

@media only screen and (max-width: 600px) {

    #header {
        font-size: 1.5em;
        line-height: 0.8;
    }

    #links {
        display: block;
        margin: 0.5em 0;
    }

    .about-link {
        margin: 0 0.3em 0 0;
    }

    .piece-media {
        width: 100%;
        height: auto;
    }

}

